--- a/src/templates/generator.html
+++ b/src/templates/generator.html
@@ -77,7 +77,7 @@
         <section class="option">
           <h2 class="option__heading">Screen Size</h2>
           <div class="dropdown">
-            <span>1280x800 <em>(detected)</em></span>
+            <span data-detected=" <em>(detected)</em>"></span>
             <i class="fa fa-bars"></i>
           </div>
         </section>
@@ -119,17 +119,17 @@
             <i class="fa fa-mobile-phone"></i>
             Smartphone
           </h3>
-          <label>
+          <label data-width="640" data-height="1136" data-ratio="0.6">
             <input type="radio" name="size" value="1">
-            <span>1136x640 <em>iPhone 5</em></span>
+            <span>640x1136 <em>iPhone 5</em></span>
           </label>
-          <label>
+          <label data-width="750" data-height="1334" data-ratio="0.6">
             <input type="radio" name="size" value="2">
-            <span>1334x750 <em>iPhone 6</em></span>
+            <span>750x1334 <em>iPhone 6</em></span>
           </label>
-          <label>
+          <label data-width="1080" data-height="1920" data-ratio="0.6">
             <input type="radio" name="size" value="3">
-            <span>1920x1080 <em>iPhone 6 Plus</em></span>
+            <span>1080x1920 <em>iPhone 6 Plus</em></span>
           </label>
         </section>
         <section class="sizes__group">
@@ -137,17 +137,17 @@
             <i class="fa fa-tablet"></i>
             Tablet
           </h3>
-          <label>
+          <label data-width="768" data-height="1024" data-ratio="0.8">
             <input type="radio" name="size" value="4">
-            <span>1024x768</span>
+            <span>768x1024</span>
           </label>
-          <label>
+          <label data-width="1536" data-height="2048" data-ratio="0.8">
             <input type="radio" name="size" value="5">
-            <span>2048x1536 <em>iPad</em></span>
+            <span>1536x2048 <em>iPad</em></span>
           </label>
-          <label>
+          <label data-width="2048" data-height="2732" data-ratio="0.8">
             <input type="radio" name="size" value="6">
-            <span>2732x2048 <em>iPad Pro</em></span>
+            <span>2048x2732 <em>iPad Pro</em></span>
           </label>
         </section>
         <section class="sizes__group">
@@ -155,27 +155,27 @@
             <i class="fa fa-laptop"></i>
             Laptop
           </h3>
-          <label>
+          <label data-width="1280" data-height="800" data-ratio="1.6">
             <input type="radio" name="size" value="7">
             <span>1280x800</span>
           </label>
-          <label>
+          <label data-width="1280" data-height="1024" data-ratio="1.3">
             <input type="radio" name="size" value="8">
             <span>1280x1024</span>
           </label>
-          <label>
+          <label data-width="768" data-height="768" data-ratio="1.8">
             <input type="radio" name="size" value="9">
             <span>1366x768</span>
           </label>
-          <label>
+          <label data-width="1440" data-height="900" data-ratio="1.6">
             <input type="radio" name="size" value="10">
             <span>1440x900</span>
           </label>
-          <label>
+          <label data-width="aaaaaaaa" data-height="aaaaaa" data-ratio="1.6">
             <input type="radio" name="size" value="11">
             <span>2560x1600 <em>rMBP 13&Prime;</em></span>
           </label>
-          <label>
+          <label data-width="2880" data-height="1800" data-ratio="1.6">
             <input type="radio" name="size" value="12">
             <span>2880x1800 <em>rMBP 15&Prime;</em></span>
           </label>
@@ -185,7 +185,7 @@
             <i class="fa fa-desktop"></i>
             Desktop 16:9
           </h3>
-          <label>
+          <label data-width="1920" data-height="1080" data-ratio="1.8">
             <input type="radio" name="size" value="13">
             <span>1920x1080</span>
           </label>
@@ -195,15 +195,15 @@
             <i class="fa fa-desktop"></i>
             Desktop 16:10
           </h3>
-          <label>
+          <label data-width="1920" data-height="1200" data-ratio="1.6">
             <input type="radio" name="size" value="14">
             <span>1920x1200</span>
           </label>
-          <label>
+          <label data-width="4096" data-height="2304" data-ratio="1.8">
             <input type="radio" name="size" value="15">
             <span>4096x2304 <em>iMac Retina 21&Prime;</em></span>
           </label>
-          <label>
+          <label data-width="5120" data-height="2880" data-ratio="1.8">
             <input type="radio" name="size" value="16">
             <span>5120x2880 <em>iMac Retina 27&Prime;</em></span>
           </label>
@@ -213,11 +213,11 @@
             <i class="fa fa-desktop"></i>
             Desktop 4:3
           </h3>
-          <label>
+          <label data-width="1024" data-height="768" data-ratio="1.3">
             <input type="radio" name="size" value="17">
             <span>1024x768</span>
           </label>
-          <label>
+          <label data-width="1600" data-height="1200" data-ratio="1.3">
             <input type="radio" name="size" value="18">
             <span>1600x1200</span>
           </label>
