--- a/src/styles/blocks/_preview.scss
+++ b/src/styles/blocks/_preview.scss
@@ -8,9 +8,10 @@
 
   &__image {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+    top: -1%;
+    left: -1%;
+    width: 102%;
+    max-width: 102%;
   }
 
   &__details {
