Replace plugin for globbing SCSS files

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,24 +1,4 @@
 @import '../../bower_components/normalize.css/normalize.css';
-@import 'setup/mixins.scss';
-@import 'setup/variables.scss';
-@import 'common/animations.scss';
-@import 'common/base.scss';
-@import 'common/extendables.scss';
-@import 'blocks/overlay.scss';
-@import 'blocks/colors.scss';
-@import 'blocks/button.scss';
-@import 'blocks/dropdown.scss';
-@import 'blocks/sizes.scss';
-@import 'blocks/footer.scss';
-@import 'blocks/footer-alt.scss';
-@import 'blocks/header.scss';
-@import 'blocks/main.scss';
-@import 'blocks/notes.scss';
-@import 'blocks/option.scss';
-@import 'blocks/pagination.scss';
-@import 'blocks/post.scss';
-@import 'blocks/posts.scss';
-@import 'blocks/preview.scss';
-@import 'blocks/share.scss';
-@import 'blocks/top.scss';
-@import 'blocks/loading.scss';
+@import 'setup/*';
+@import 'common/*';
+@import 'blocks/*';
