Rename theme from Ubernator to Ubermost Create

--- a/wp/wp-content/themes/ubermost-create/style.css
+++ b/wp/wp-content/themes/ubermost-create/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Ubernator
-Theme URI: https://github.com/lamberski/ubernator
+Theme Name: Ubermost Create
+Theme URI: http://ubermost.com
 Author: Maciej Lamberski
 Author URI: http://lamberski.com
 Description: Custom theme used for generating customized posters and wallpapers with letterings from Ubermost (http://ubermost.com).
