Update Frontkit Gulp workflow

--- a/gulpfile.js/icons.css
+++ b/gulpfile.js/icons.css
@@ -21,6 +21,6 @@
 
 <% _.each(glyphs, function (glyph) { %>
   .<%= className %>--<%= glyph.name %>:before {
-    content: '\<%= glyph.codepoint.toString(16).toUpperCase() %>'
+    content: '\<%= glyph.unicode.toString(16).toUpperCase() %>'
   }
 <% }); %>
