--- a/wp/wp-content/themes/ubermost-create/views/pages/home.twig
+++ b/wp/wp-content/themes/ubermost-create/views/pages/home.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="main__preview loading">
-    <div class="loading__body preview" data-gateway="{{ api_endpoint }}" data-action="get_post"></div>
+    <div class="loading__body preview" data-endpoint="{{ api_endpoint }}" data-action="get_post"></div>
     <span class="loading__indicator"></span>
   </div>
 
