--- a/wp/wp-content/themes/ubermost-create/views/partials/overlays.twig
+++ b/wp/wp-content/themes/ubermost-create/views/partials/overlays.twig
@@ -33,7 +33,7 @@
 <section id="posts-overlay" class="overlay loading">
   <a href="#" class="overlay__close"></a>
   <div class="overlay__body">
-    <ul class="loading__body posts" data-gateway="{{ api_endpoint }}" data-action="get_posts"></ul>
+    <ul class="loading__body posts" data-endpoint="{{ api_endpoint }}" data-action="get_posts"></ul>
   </div>
   <span class="loading__indicator"></span>
 </section>
