--- a/wp/wp-content/themes/ubermost-create/views/partials/header.twig
+++ b/wp/wp-content/themes/ubermost-create/views/partials/header.twig
@@ -20,8 +20,10 @@
         </a>
       </li>
     </ul>
-    <div class="header__body__info">
-      <p>Create inspiring wallpaper from your favourite lettering! You can download it as a wallpaper for your smartphone and PC, or if you&apos;re feeling social&mdash;post it on social network of choice to share the wisdom with your friends.</p>
-    </div>
+    {% if not is404 %}
+      <div class="header__body__info">
+        <p>Create inspiring wallpaper from your favourite lettering! You can download it as a wallpaper for your smartphone and PC, or if you&apos;re feeling social&mdash;post it on social network of choice to share the wisdom with your friends.</p>
+      </div>
+    {% endif %}
   </div>
 </header>
