--- a/wp/wp-content/themes/ubermost-create/views/partials/header.twig
+++ b/wp/wp-content/themes/ubermost-create/views/partials/header.twig
@@ -2,6 +2,7 @@
   <div class="header__body">
     <a href="{{ site.link }}" class="header__body__logo">
       {% include 'partials/logo.twig' %}
+      {% include 'partials/logo-create.twig' %}
     </a>
     <ul class="header__body__menu">
       <li>
@@ -22,7 +23,7 @@
     </ul>
     {% if not is404 %}
       <div class="header__body__info">
-        <p>Create inspiring wallpaper from your favourite lettering! You can download it as a wallpaper for your smartphone and PC, or if you&apos;re feeling social&mdash;post it on social network of choice to share the wisdom with your friends.</p>
+        <p>Create inspiring wallpaper from your favourite Ubermost lettering! You can download it as a wallpaper for your smartphone and PC, or if you&apos;re feeling social&mdash;post it on social network of choice to share the wisdom with your friends.</p>
       </div>
     {% endif %}
   </div>
