Add sticky footer

--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -13,10 +13,10 @@ $size--minor : 15px;
 
 $color--accent     : #ffcd44;
 $color--base       : #313130;
-$color--minor      : #888887;
-$color--faint      : #bbbbb4;
-$color--border     : #F0F0F0;
-$color--background : #e6e6e6;
+$color--minor      : #888886;
+$color--faint      : #bbbbb8;
+$color--border     : #F0F0EB;
+$color--background : #e6e6e4;
 
 $font--serif : ('Source Serif Pro', Georgia, serif);
 $font--sans  : ('Source Sans Pro', Arial, sans-serif);
