--- a/src/styles/common/_base.scss
+++ b/src/styles/common/_base.scss
@@ -1,3 +1,7 @@
+html, body {
+  min-height: 100%;
+}
+
 html {
   font-size: $size--base;
 
@@ -26,6 +30,16 @@ body {
   font-family: $font--sans;
   line-height: rem($tick);
   height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  > * {
+    width: 100%;
+  }
+}
+
+main {
+  flex-grow: 1;
 }
 
 hr {
