--- a/wp/wp-content/themes/ubermost-create/views/layouts/main.twig
+++ b/wp/wp-content/themes/ubermost-create/views/layouts/main.twig
@@ -19,7 +19,7 @@
   <body>
     {% include 'partials/header.twig' %}
 
-    <main class="main">
+    <main>
       {% block content %}{% endblock %}
     </main>
 
