--- a/src/styles/common/_base.scss
+++ b/src/styles/common/_base.scss
@@ -1,7 +1,3 @@
-html, body {
-  min-height: 100%;
-}
-
 html {
   font-size: $size--base;
 
@@ -30,16 +26,10 @@ body {
   font-family: $font--sans;
   line-height: rem($tick);
   height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-
-  > * {
-    width: 100%;
-  }
-}
-
-main {
-  flex-grow: 1;
+  justify-content: space-between;
 }
 
 hr {
