--- a/src/styles/blocks/_notes.scss
+++ b/src/styles/blocks/_notes.scss
@@ -12,7 +12,7 @@
   }
 
   .more_notes_link_container {
-    margin-top: rem($tick);
+    margin-top: rem($tick--vertical);
 
     a {
       color: $color--minor;
