--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -9,8 +9,8 @@
 
     &__logo {
       svg {
-        height: rem($tick * 1.5);
-        margin: rem($tick * .25) 0;
+        height: rem($tick--vertical * 1.5);
+        margin: rem($tick--vertical * .25) 0;
       }
 
       svg + svg {
@@ -26,7 +26,7 @@
       li {
         @extend %heading;
         list-style: none;
-        margin-left: rem($tick);
+        margin-left: rem($tick--vertical);
       }
 
       i {
@@ -37,7 +37,7 @@
       a {
         position: relative;
         display: block;
-        margin-top: rem($tick);
+        margin-top: rem($tick--vertical);
 
         &::before {
           content: '';
@@ -53,7 +53,7 @@
     &__info {
       @extend %text;
       font-family: $font--serif;
-      padding-top: rem($tick * 2);
+      padding-top: rem($tick--vertical * 2);
       flex-basis: 61.8%;
       color: $color--minor;
     }
@@ -73,7 +73,7 @@
     &__body {
       &__logo {
         svg {
-          height: rem($tick);
+          height: rem($tick--vertical);
           margin: 0;
         }
       }
@@ -84,7 +84,7 @@
         a {
           position: relative;
           margin: 0;
-          top: rem($tick / 4);
+          top: rem($tick--vertical / 4);
         }
       }
 
@@ -97,7 +97,7 @@
   @include breakpoint(phone) {
     &__body {
       &__info {
-        padding-top: rem($tick);
+        padding-top: rem($tick--vertical);
       }
     }
   }
