--- a/src/styles/blocks/_share.scss
+++ b/src/styles/blocks/_share.scss
@@ -1,7 +1,7 @@
 .share {
   color: $color--minor;
   font-size: 0;
-  line-height: rem($tick * 2);
+  line-height: rem($tick--vertical * 2);
   opacity: 0;
   transition: trans(opacity, $duration--ease);
 
