--- a/src/styles/blocks/_sizes.scss
+++ b/src/styles/blocks/_sizes.scss
@@ -3,16 +3,16 @@
   flex-wrap: wrap;
   align-items: flex-start;
   align-content: flex-start;
-  margin-top: rem(-$tick * 2);
+  margin-top: rem(-$tick--vertical * 2);
 
   &__group {
     flex-basis: 33%;
-    margin-top: rem($tick * 2);
+    margin-top: rem($tick--vertical * 2);
 
     &__heading {
       @extend %heading;
       margin: 0;
-      line-height: rem($tick * 2);
+      line-height: rem($tick--vertical * 2);
 
       i {
         font-size: rem(24px);
