--- a/src/templates/tumblr.html
+++ b/src/templates/tumblr.html
@@ -62,5 +62,15 @@
       {block:NextPage}<a rel="next" href="{NextPage}">&rarr;</a>{/block:NextPage}
     </nav>
   {/block:Pagination}
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-78523892-2', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
 </html>
