--- a/wp/wp-content/themes/ubermost-create/views/layouts/main.twig
+++ b/wp/wp-content/themes/ubermost-create/views/layouts/main.twig
@@ -1,9 +1,3 @@
-{%
-  set assets_path = environment == 'development'
-    ? theme.link ~ '/assets'
-    : '//assets.ubermost.com'
-%}
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,7 +8,7 @@
     <link href="//assets.ubermost.com/images/favicon.png" rel="shortcut icon">
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro|Source+Serif+Pro:400,600" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="{{ assets_path }}/styles/main.min.css" rel="stylesheet">
+    <link href="//assets.ubermost.com/styles/main.min.css" rel="stylesheet">
   </head>
   <body>
     {% include 'partials/header.twig' %}
@@ -27,6 +21,15 @@
     {% include 'partials/overlays.twig' %}
     {% include 'partials/templates.twig' %}
 
-    <script src="{{ assets_path }}/scripts/create.min.js"></script>
+    <script src="//assets.ubermost.com/scripts/create.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-78523892-2', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
